--- a/jenkins_data/docker-compose.yml
+++ b/jenkins_data/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - net
   db_host:
     container_name: db
-    image: mysql:5.7
+    image: mysql:5.7/mysql-server:5.7
     environment:
       - "MYSQL_ROOT_PASSWORD=1234"
     volumes:
