--- a/jenkins_data/docker-compose.yml
+++ b/jenkins_data/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     container_name: jenkins
     image: jenkins/jenkins
     ports:
-      - "8080:8080"
+      - "8081:8080"  # Use 8081 on host, mapped to 8080 in container
     volumes:
       - $PWD/jenkins_home:/var/jenkins_home
     networks:
@@ -18,6 +18,7 @@ services:
     networks:
       - net
   db_host:
+    platform: linux/amd64
     container_name: db
     image: mysql/mysql-server:5.7
     environment:
